--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -4,40 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        button {display:block;margin:0 auto 50px auto;}
-        h1 {text-align: center;margin-bottom: 50px;}
-        a {margin: 40px}
-        p {text-align: center;}
-    </style>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Offender Locator Web App</title>
-    <h1 style="margin-bottom: 0px">Offender Locator</h1>
-
-    <div style = "text-align: right;">
-        <a href="welcome.html">Home</a>
-        <a href="lookup.html">Lookup</a>
-        <a href="filecomplaint.html">File a complaint</a>
-        <a href="login.html">Login</a>
-        <hr>
-    </div>
 </head>
+
 <body>
-    <br>
-    <p><img src = "images/welcome_img.jpg" alt = "Haha kulong"
-        style="float:left;width:600px;height:500px;margin-bottom:50px;">
-
-        <h1>Anabu's<br>Offender Locator</h1>
-        <p>Get started by searching for an offender by clicking the button below</p>
-        <form action="lookup.html">
-            <button type="submit">LOOK-UP OFFENDER</button>
-        </form>
-        <p>Or click the button below if you need to file a complaint</p>
-        <form action="filecomplaint.html">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+        <button class="navbar-toggler" type="button" 
+        data-bs-toggle="collapse" 
+        data-bs-target="#hamburger" 
+        aria-controls="hamburger" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="hamburger">
+            <ul class="navbar-nav ms-auto text-center">
+              <li><a class="nav-link" href="welcome.html">Home</a></li>
+              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
+              <li><a class="nav-link" href="login.html">Login</a></li>
+            </ul>
+        </div>
+      </nav>
+      <div>
+          <div>
+            <img class ="float-start ms-auto" src = "images/welcome_img.jpg" alt = "Haha kulong">
+          </div>
+          <div>
+            <h1>Anabu's Offender Locator</h1>
+            <div>
+                <p>Get started by searching for an offender by clicking the button below</p>
+                <button type="submit">LOOK-UP OFFENDER</button>
+            </div>
+           <div>
+            <p>Or click the button below if you need to file a complaint</p>
             <button type="submit">FILE A COMPLAINT</button>
-            </form>
-            <!--- I just did my first commit?! -->
-    </p>
-
+           </div>
+        </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
