--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         button {display:block;margin: auto;}
         h1 {text-align: center}
@@ -11,21 +12,25 @@
         a {margin: 40px}
         textarea {text-align: left; margin : 3px 50px; width:325px}
         label {display: inline-block; width: 150px;}
-        
     </style>
-
     <title>File A Complaint</title>
-    <h1>Offender Locator</h1>
-
-    <div style = "text-align: right;">
-        <a href="welcome.html">Home</a>
-        <a href="lookup.html">Lookup</a>
-        <a href="filecomplaint.html">File a complaint</a>
-        <a href="login.html">Login</a>
-        <hr>
-    </div>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
+            aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="hamburger">
+            <ul class="navbar-nav ms-auto text-center">
+              <li><a class="nav-link" href="welcome.html">Home</a></li>
+              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
+              <li><a class="nav-link" href="login.html">Login</a></li>
+            </ul>
+        </div>
+    </nav>
     <p><img src = "images/complaint.jpg" alt = "Complain"
         style="float:right;height:300px;margin-left:100px;margin-top: 110px;margin-bottom:50px;">
 
@@ -58,5 +63,6 @@
             </form>
 
     </p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
