--- a/HTML Wireframe/forgot.html
+++ b/HTML Wireframe/forgot.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         h1 {text-align: center}
         label {display: inline-block; width: 150px;}
         a {margin: 0px 40px}
-
     </style>
-
     <title>Offender Locator Reset</title>
-    <h1>Offender Locator</h1>
-
-    <div style = "text-align: right">
-        <a href="welcome.html">Home</a>
-        <a href="lookup.html">Lookup</a>
-        <a href="filecomplaint.html">File a complaint</a>
-        <a href="login.html">Login</a>
-        <hr>
-    </div>
-
+    
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
+            aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="hamburger">
+            <ul class="navbar-nav ms-auto text-center">
+              <li><a class="nav-link" href="welcome.html">Home</a></li>
+              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
+              <li><a class="nav-link" href="login.html">Login</a></li>
+            </ul>
+        </div>
+    </nav>
     <h1 style="text-align: left; margin:0px">Reset Password</h1>
     <form>
         <fieldset style="width: 400px;">
@@ -36,5 +41,6 @@
             <a href="login.html">Back to login</a>
         </fieldset>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
