--- a/HTML Wireframe/transfer.html
+++ b/HTML Wireframe/transfer.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Transfer Form</title>
 </head>
 <body>
     <form action="">
-        <h1>OFFENDER LOCATOR</h1>
-        <div style = "text-align: right;">
-            <a href="welcome.html">Home</a>
-            <a href="lookup.html">Lookup</a>
-            <a href="filecomplaint.html">File a complaint</a>
-            <a href="login.html">Login</a>
-            <hr>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
+                aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="hamburger">
+                <ul class="navbar-nav ms-auto text-center">
+                  <li><a class="nav-link" href="welcome.html">Home</a></li>
+                  <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+                  <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
+                  <li><a class="nav-link" href="login.html">Login</a></li>
+                </ul>
+            </div>
+        </nav>
         <fieldset>
             <h2 style="text-align: center;">TRANSFER FORM</h2>
             <p style="text-align: right;">Date of Complaint:_____________</p>
@@ -45,6 +53,6 @@
         
     </form>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
