--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -9,7 +9,7 @@
     <title>Offender Locator Web App</title>
 </head>
 
-<body>
+<body class="body-welcome">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="welcome.html">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
@@ -30,14 +30,14 @@
             <img class ="float-start ms-auto" src = "images/welcome_img.jpg" alt = "Haha kulong">
           </div>
           <div>
-            <h1>Anabu's Offender Locator</h1>
+            <h1 class="h1-welcome">Anabu's Offender Locator</h1>
             <div>
-                <p>Get started by searching for an offender by clicking the button below</p>
-                <button type="submit">LOOK-UP OFFENDER</button>
+                <p class="p-welcome">Get started by searching for an offender by clicking the button below</p>
+                <button class ="button-welcome" type="submit">LOOK-UP OFFENDER</button>
             </div>
            <div>
-            <p>Or click the button below if you need to file a complaint</p>
-            <button type="submit">FILE A COMPLAINT</button>
+            <p class="p-welcome">Or click the button below if you need to file a complaint</p>
+            <button  class="button-welcome"type="submit">FILE A COMPLAINT</button>
            </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
