--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-        button {display:block;margin: auto;}
-        h1 {text-align: center}
-        p {text-align: left; margin: 3px 50px;}
-        a {margin: 40px}
-        textarea {text-align: left; margin : 3px 50px; width:325px}
-        label {display: inline-block; width: 150px;}
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
     <title>File A Complaint</title>
 </head>
 <body>
