--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -25,26 +25,22 @@
     </nav>
     <h2>Required Information</h2>
     <form>
-       <div>
-           <label>First Name: </label>
-           <input type="text">
-           <label>Last Name:</label>
-           <input type="text">
-       </div>
-       <h4>OR</h4> 
-       <div>
-        <label>Offender ID: </label>
-        <input type="text">
-        <label>Case ID:</label>
-        <input type="text">
-        </div>
-        <button>Search</button>
-        <hr>
+    
+        <div class ="container-lg">
+            <div class="text-center">
+             <h2>Required Information</h2>
+            </div>
+         <div class="row justify-content-center my-5">
+             <div class="col-lg-6">
+                 
+             </div>
+ 
+         </div>
     </form>
     <br>
     <div>
         <h2>SEARCH RESULTS:</h2>
-        <table border="1">
+        <table class="table table-dark table-striped">
             <div>
                 <tr>
                     <th>First Name</th>
