--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
     <title>Offender Locator Web App</title>
 </head>
 
-<body class="body-welcome">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 5%">
         <a class="navbar-brand" href="welcome.html">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,21 +25,28 @@
             </ul>
         </div>
     </nav>
-      <div>
-          <div>
-            <img class ="float-start ms-auto" src = "images/welcome_img.jpg" alt = "Haha kulong">
-          </div>
-          <div>
-            <h1 class="h1-welcome">Anabu's Offender Locator</h1>
-            <div>
-                <p class="p-welcome">Get started by searching for an offender by clicking the button below</p>
-                <button class ="button-welcome" type="submit">LOOK-UP OFFENDER</button>
-            </div>
-           <div>
-            <p class="p-welcome">Or click the button below if you need to file a complaint</p>
-            <button  class="button-welcome"type="submit">FILE A COMPLAINT</button>
-           </div>
+    <div class="row" >
+        <div class="col-lg-6 "><img class="img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
         </div>
+
+        <div class="col-lg-6 ">
+            <div class="row">
+                <div class="col-lg-4"><h1 class="h1-welcome">Anabu's Offender Locator</h1></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4"><p class="p-welcome">Get started by searching for an offender by clicking the button below</p>
+                    <button class ="button-welcome" type="submit">LOOK-UP OFFENDER</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4"><p class="p-welcome">Or click the button below if you need to file a complaint</p>
+                    <button  class="button-welcome"type="submit">FILE A COMPLAINT</button>
+                </div>
+            </div>
+        </div>
+        
+    </div> 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
