--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -1,139 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <title>OFFENDER LOCATOR</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
-            aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="hamburger">
-            <ul class="navbar-nav ms-auto text-center">
-              <li><a class="nav-link" href="welcome.html">Home</a></li>
-              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-              <li><a class="nav-link" href="login.html">Login</a></li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#hamburger"
+        aria-controls="hamburger"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="hamburger">
+        <ul class="navbar-nav ms-auto text-center">
+          <li><a class="nav-link" href="welcome.html">Home</a></li>
+          <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+          <li>
+            <a class="nav-link" href="filecomplaint.html">File a complaint</a>
+          </li>
+          <li><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+      </div>
     </nav>
-    <h2>Required Information</h2>
-    <form>
-    
-        <div class ="container-lg">
-            <div class="text-center">
-             <h2>Required Information</h2>
-            </div>
-         <div class="row justify-content-center my-5">
-             <div class="col-lg-6">
-                 
-             </div>
- 
-         </div>
-    </form>
-    <br>
-    <div>
-        <h2>SEARCH RESULTS:</h2>
-        <table class="table table-dark table-striped">
-            <div>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Age</th>
-                    <th>Gender</th>
-                    <th>Offender ID</th>
-                    <th>Case ID</th>
-                    <th>Case Status</th>
-                    <th>Case Description</th>
-                    <th>Offense</th>
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-                </tr>
-                <tr>
-                    <td>John</td>
-                    <td>Doe</td>
-                    <td>40</td>
-                    <td>Male</td>
-                    <td>0001</td>
-                    <td>0001</td>
-                    <td>Ongoing</td>
-                    <td>Lorem Ipsum</td>
-                    <td>Theft</td>
-                </tr>
-
-            </div>
-        </table>
+    <hr>
+    <div class="container-lg">
+      <h3>Directions:</h3>
+      <li>
+        Search for an offender's location and release date if they are
+        incarcerated and under the custody of the Barangay Anabu II-F City Hall,
+        Imus city of Cavite. Offenders who are not under Anabu II-F custody will
+        not appear in the search results.
+      </li>
+      <li>Type the first name and Last name or at least the Offender ID.</li>
+      <li>Click the search button to see results.</li>
+    </div>
+    <hr>
+    <section id="Search">
+      <div class="container-lg">
+        <div class="text-center">
+          <h3>Required Information</h3>
+        </div>
+        <div class="row justify-content-center my-5">
+          <div class="col-lg-6">
+            <form>
+              <label for="text" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="firstName" />
+              <label for="text" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="lastName" />
+              <br />
+              <input type="submit" />
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <br />
+    <div class="container-lg">
         <hr>
+      <h2>SEARCH RESULTS:</h2>
+      <table class="table table-dark table-striped">
+        <div>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>Gender</th>
+            <th>Offender ID</th>
+            <th>Case ID</th>
+            <th>Case Status</th>
+            <th>Case Description</th>
+            <th>Offense</th>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>40</td>
+            <td>Male</td>
+            <td>0001</td>
+            <td>0001</td>
+            <td>Ongoing</td>
+            <td>Lorem Ipsum</td>
+            <td>Theft</td>
+          </tr>
+        </div>
+      </table>
+      <hr />
     </div>
-    <div>
-        <h2>Disclaimer:</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, maiores nostrum! Quo pariatur autem error iusto modi doloribus quam voluptatibus,
-            <br> expedita minus quaerat, labore fugit, veniam quas in sit eaque!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sequi odio quis voluptatem enim dolore, id saepe, corporis ipsam quasi sapiente ducimus,<br> aliquam repellendus laboriosam corrupti! Minus tempora voluptatum voluptate?</p>
+    <div class="container-lg">
+      <h2>Disclaimer:</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, maiores
+        nostrum! Quo pariatur autem error iusto modi doloribus quam
+        voluptatibus, <br />
+        expedita minus quaerat, labore fugit, veniam quas in sit eaque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sequi odio
+        quis voluptatem enim dolore, id saepe, corporis ipsam quasi sapiente
+        ducimus,<br />
+        aliquam repellendus laboriosam corrupti! Minus tempora voluptatum
+        voluptate?
+      </p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
