--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
-    <title>Offender Locator Web App</title>
+    <title>Offender Locator Welcome</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 5%">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="welcome.html">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,21 +29,21 @@
         </div>
     </nav>
     <div class="row" >
-        <div class="col-lg-6 "><img class="img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
+        <div class="col-md-6 " style="margin: auto;"><img class="img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
         </div>
 
-        <div class="col-lg-6 ">
+        <div class="col-md-6 ">
             <div class="row">
-                <div class="col-lg-4"><h1 class="h1-welcome">Anabu's Offender Locator</h1></div>
+                <div class="col-md-4" style="margin: auto;"><h1>Anabu's Offender Locator</h1></div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><p class="p-welcome">Get started by searching for an offender by clicking the button below</p>
+                <div class="col-md-4"><p>Get started by searching for an offender by clicking the button below</p>
                     <button class ="button-welcome" type="submit">LOOK-UP OFFENDER</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><p class="p-welcome">Or click the button below if you need to file a complaint</p>
-                    <button  class="button-welcome"type="submit">FILE A COMPLAINT</button>
+                <div class="col-md-4"><p>Or click the button below if you need to file a complaint</p>
+                    <button type="submit">FILE A COMPLAINT</button>
                 </div>
             </div>
         </div>
