fixed filecomplaint layout

--- a/HTML Wireframe/login.html
+++ b/HTML Wireframe/login.html
@@ -10,6 +10,7 @@
         label {display: inline-block; width: 150px;}
         a {margin: 0px 40px}
     </style>
+    <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
     <title>Offender Locator Log In</title>
 
 
