--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="hamburger">
         <ul class="navbar-nav ms-auto text-center">
           <li><a class="nav-link" href="welcome.html">Home</a></li>
-          <li><a class="nav-link" href="lookup.html">Lookup</a></li>
+          <li><a class="nav-link" href="lookupgit p.html">Lookup</a></li>
           <li>
             <a class="nav-link" href="filecomplaint.html">File a complaint</a>
           </li>
