--- a/HTML Wireframe/release.html
+++ b/HTML Wireframe/release.html
@@ -5,43 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+
     <title>Release Form</title>
 </head>
 <body>
-    <form action="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
-                aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="hamburger">
-                <ul class="navbar-nav ms-auto text-center">
-                  <li><a class="nav-link" href="welcome.html">Home</a></li>
-                  <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-                  <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-                  <li><a class="nav-link" href="login.html">Login</a></li>
-                </ul>
-            </div>
+            <a class="navbar-brand" href="welcome.html">Anabu's Offender Locator</a>
         </nav>
-        <fieldset>
-            <h2 style="text-align: center;">RELEASE FORM</h2>
-            <p style="text-align: right;">Date of Complaint:_____________</p>
-            <p style="text-align: right;">Date of Release:_____________</p>
-            <p><b>Name:</b> DOE, JOHN A.</p>
-            <p><b>Age:</b> 40 years old</p>
-            <p><b>Gender:</b>: Male</p>
-            <p><b>Offender ID:</b> 0001</p>
-            <p><b>Case ID:</b>: 0001</p>
-            <p><b>Case:</b>: Theft</p>
-
-            <div>
-                <h3>Case Description:</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil, exercitationem ut, pariatur suscipit commodi laboriosam necessitatibus fugiat deserunt perferendis amet? Nesciunt voluptatibus et facere, veritatis sed rerum quod vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, asperiores incidunt. Praesentium animi repellat reprehenderit magnam, facere tenetur quia beatae ut quo ex doloribus voluptate possimus? Odio asperiores culpa quisquam.</p>
-            </div>
-
-        </fieldset>
+        <h2 style="text-align: center;">RELEASE FORM</h2>
+        <p style="text-align: right;">Date of Complaint:_____________</p>
+        <p style="text-align: right;">Date of Release:_____________</p>
+        <p><b>Name:</b> DOE, JOHN A.</p>
+        <p><b>Age:</b> 40 years old</p>
+        <p><b>Gender:</b>: Male</p>
+        <p><b>Offender ID:</b> 0001</p>
+        <p><b>Case ID:</b>: 0001</p>
+        <p><b>Case:</b>: Theft</p>
+        <div>
+            <h3>Case Description:</h3>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil, exercitationem ut, pariatur suscipit commodi laboriosam necessitatibus fugiat deserunt perferendis amet? Nesciunt voluptatibus et facere, veritatis sed rerum quod vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, asperiores incidunt. Praesentium animi repellat reprehenderit magnam, facere tenetur quia beatae ut quo ex doloribus voluptate possimus? Odio asperiores culpa quisquam.</p>
+        </div>     
         <br>
         <br>
         <br>
@@ -51,8 +34,7 @@
         <br><p style="float: right;">Barangay Captain</p>
         <p style="text-align: center;">_______________________________</p>
         <p style="text-align: center;">Complainant</p>
-        
-    </form>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
