--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -83,7 +83,8 @@
                         <br>
                     </div>
                     <div class="col-md-12">
-                        <textarea id="caseDetails" name="caseDetails" class="form-control" rows="5"></textarea>
+                        <textarea id="caseDetails" name="caseDetails" class="form-control" rows="5" 
+                        placeholder="Insert case details here or complainant's statement here"></textarea>
                     </div>
                 </div>
                 <div class="row">
