--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -50,39 +50,26 @@
       <li>Type the first name and Last name or at least the Offender ID.</li>
       <li>Click the search button to see results.</li>
     
-    <hr>
-    <h2>Required Information</h2>
-    <label class="col-0" for="first-name"></label>
-    <span class="label">First Name:</span>
-    <input id="first-name" type="text" name="FirstNameLowercase">
-    <label class="col-0 " for="last-name"></label>
-    <span class="label">Last Name:</span>
-    <input id= "last-name "type="text" name="LastNameLowercase">
-    <label class="col-0 mar-r-1" for="offender-id"></label>
-    <span class="label">Offender ID:</span>
-    <input id="offender-id" type="text">
-    <a class="btn btn-outline-dark col-0 " role="button">Search</a>
-  </div>
-
-    <!-- <section id="Search">
-      <div class="container-lg">
-        <div class="text-center">
-          <h3>Required Information</h3>
+      <hr>
+      <h2>Required Information</h2>
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <label for="fnamesearch">First Name:</label>
+          <input type="text" class="form-control" name="fnamesearch" id="fnamesearch" placeholder="John">
         </div>
-        <div class="row justify-content-center my-5">
-          <div class="col-lg-6">
-            <form>
-              <label for="text" class="form-label">First Name</label>
-              <input type="text" class="form-control" id="firstName" />
-              <label for="text" class="form-label">Last Name</label>
-              <input type="text" class="form-control" id="lastName" />
-              <br />
-              <input type="submit" />
-            </form>
-          </div>
+        <div class="col-md-4 col-sm-12">
+          <label for="lnamesearch">Last Name:</label>
+          <input type="text" class="form-control" name="lnamesearch" id="lnamesearch" placeholder="Doe">
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <label for="offenderidsearch">Offender ID:</label>
+          <input type="text" class="form-control" name="offenderidsearch" id="offenderidsearch" placeholder="0001">
         </div>
       </div>
-    </section> -->
+      <button type="submit" class="btn btn-outline-dark" style="margin: auto;">SEARCH</button>
+      </div>
+      
+      </div>
     <br />
     <div class="container-lg">
         <hr>
