responsive login and forgot page

--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
         <div class="row" >
-            <div class="col-md-6 " style="margin: auto;"><img class="img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
+            <div class="col-md-6 " style="margin: auto;"><img class="rounded img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
             </div>
     
             <div class="col-md-6 ">
