--- a/HTML Wireframe/login.html
+++ b/HTML Wireframe/login.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-        h1 {text-align: center}
-        label {display: inline-block; width: 150px;}
-        a {margin: 0px 40px}
-    </style>
+    
     <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
-    <title>Offender Locator Log In</title>
+    <title>Offender Locator Login</title>
 
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="welcome.html">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,19 +33,38 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align: left; margin:0px">Log In</h1>
-    <form>
-        <fieldset style="width: 400px;">
-            <legend>Enter required information : </legend>
-            <p><label for="pass">Password : </label>
-            <input type="text" id="pass" name="pass"></p>
-            <p><label for="confirmpass">Confirm Password : </label>
-            <input type="confirmpass" id="confirmpass" name="confirmpass"></p>
-            <input type="submit" value="Log In">
-            <a href="forgot.html">Reset Password</a>
 
-        </fieldset>
-    </form>
+    <div class="container-fluid">
+        <div class="row" style="margin: 5% 30%;width: fit-content;">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Login</h1>
+                    <p>Enter required information</p>
+                </div>
+            </div>
+            <div class="row" id="nomargin">
+                <div class="col-md-4" id="loginpassword">
+                    <label for="inputpassword">Password :</label>
+                    <input type="text" class="form-control" name="inputpassword" id="inputpassword" placeholder="*********">
+                </div>
+            </div>
+            <div class="row" id="nomargin">
+                <div class="col-md-4" id="loginconfirm">
+                    <label for="inputconfirm">Confirm Password :</label>
+                    <input type="text" class="form-control" name="inputconfirm" id="inputconfirm" placeholder="*********">
+                </div>
+            </div><div class="row" id="nomargin">
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-outline-dark" style="margin: auto;">Login</button>
+                </div>
+            </div><div class="row" id="nomargin">
+                <div class="col-md-4">
+                    <a href="forgot.html" class="link-light"><em>Reset password here!</em></a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
