fixed font readability

--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -92,7 +92,7 @@
             </div>
             <div class="row" id="nomargin">
                 <div class="col-md-4">
-                    <button type="submit" class="btn btn-outline-dark">FILE A COMPLAINT</button>
+                    <button type="submit" class="btn btn-outline-dark"><i class="fas fa-file-signature"></i> File complaint</button>
                 </div>
             </div>
         </div>
