--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -60,7 +60,7 @@
           <input type="text" class="form-control" name="searchoffenderid" id="searchoffenderid" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-dark" style="margin: auto;">SEARCH</button>
+      <button type="submit" class="btn btn-outline-dark" style="margin: auto;"><i class="fas fa-search"></i> Search</button>
       </div>
       
       </div>
