--- a/HTML Wireframe/welcome.html
+++ b/HTML Wireframe/welcome.html
@@ -34,20 +34,20 @@
             </div>
         </nav>
         <div class="row" >
-            <div class="col-md-6 " style="margin: auto;"><img class="rounded img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
+            <div class="col-md-6" style="margin: auto;"><img class="rounded img-fluid" src="/HTML Wireframe/images/welcome_img.jpg">
             </div>
     
             <div class="col-md-6 ">
                 <div class="row">
-                    <div class="col-md-4" ><h1>Anabu's Offender Locator</h1></div>
+                    <div class="col-md-4" ><h1 style="font-weight: bolder;">Anabu's Offender Locator</h1></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4"><p>Get started by searching for an offender by clicking the button below</p>
+                    <div class="col-md-4"><h4>Get started by searching for an offender by clicking the button below</h4>
                         <a class="btn btn-outline-dark" href="lookup.html" role="button"><i class="fas fa-search"></i> Look-up</a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4"><p>Or click the button below if you need to file a complaint</p>
+                    <div class="col-md-4"><h4>Or click the button below if you need to file a complaint</h4>
                         <a class="btn btn-outline-dark" href="filecomplaint.html" role="button"><i class="fas fa-file-signature"></i> 
                             File A Complaint</a>
                     </div>
