Fixed the position of buttons

--- a/HTML Wireframe/lookupAdmin.html
+++ b/HTML Wireframe/lookupAdmin.html
@@ -26,7 +26,11 @@
     .HLookup{
         background-color: #164a41;
 }
-    
+    li{
+    margin: 2% auto;
+    font-family: 'Montserrat', sans-serif;
+    color: #EEEEEE;
+}
     </style>
 </head>
 <body class="adminLookup">
@@ -94,7 +98,7 @@
           <input type="text" class="form-control" name="offenderidsearch" id="offenderidsearch" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-light" style="margin: auto;">SEARCH</button>
+      <button type="submit" class="btn btn-outline-light" style="margin: 4% auto;"><i class="fas fa-search"></i> Search</button>
       </div>
       <div class="container-lg">
         <hr>
