Fixed Disclaimer and Added Print button

--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -153,17 +153,8 @@
     <div class="container-lg" style="padding-bottom: 3%;">
       <h2>Disclaimer:</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, maiores
-        nostrum! Quo pariatur autem error iusto modi doloribus quam
-        voluptatibus, <br />
-        expedita minus quaerat, labore fugit, veniam quas in sit eaque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sequi odio
-        quis voluptatem enim dolore, id saepe, corporis ipsam quasi sapiente
-        ducimus,<br />
-        aliquam repellendus laboriosam corrupti! Minus tempora voluptatum
-        voluptate?
+        The information shown in the offender locator is updated daily and reflects the most recent data available.
+        Specific questions regarding an offender's sentence cannot be discussed with the general public.
       </p>
     </div>
 
