--- a/HTML Wireframe/release.html
+++ b/HTML Wireframe/release.html
@@ -13,6 +13,8 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="welcome.html">Anabu's Offender Locator</a>
+        <ul class="navbar-nav ms-auto text-center">
+            <li><a class="nav-link" href=""><img src="images/printer.png" alt="Print File" height="30px" width="30px"></a></li>
         </nav>
         
         <div class="row">
