--- a/HTML Wireframe/release.html
+++ b/HTML Wireframe/release.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/HTML Wireframe/css/styles.css">
     <title>Release Form</title>
 </head>
+<style>
+    
+    html,body{
+    height: 100%;
+    text-align: center;
+    margin: auto;
+    }
+    #nomargin{
+        margin: 0%;
+    }
+    h2{
+        margin: 2% auto;
+        font-family: 'Montserrat', sans-serif;
+    }
+    p{
+        margin: 2% auto;
+    }
+    .row{
+        margin: 0% auto;
+    }
+    .col-md-4{
+        margin: auto;
+        width: fit-content;
+    }
+</style>
 <body>
 
     <div class="container-fluid">
@@ -128,6 +152,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script type="text/javascript">
+        document.body.style.zoom="125%"
         function printRelease() {
             window.print();
         }
