--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -92,31 +92,13 @@
             </div>
             <div class="row" id="nomargin">
                 <div class="col-md-4">
-                    <button type="submit" class="btn btn-outline-dark"><i class="fas fa-file-signature" onclick="checkInputs()"></i> File complaint</button>
+                    <button type="submit" class="btn btn-outline-dark" id="fileComplaint"><i class="fas fa-file-signature" ></i> File complaint</button>
                 </div>
             </div>
         </div>
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
-        var firstName = document.getElementById('inputFname');
-        var lastName = document.getElementById('inputLname');
-        var age = document.getElementById('inputAge');
-        var gender = document.getElementById('inputGender');
-        var offense = document.getElementById('inputOffense');
-        var casedetails = document.getElementById('inputCaseDetails');
-
-        function checkInputs(){
-            var firstNameValue = firstName.value.trim()
-            var lastNameValue = lastName.value.trim()
-            var ageValue = age.value.trim()
-            var genderValue = gender.value.trim()
-            var offenseValue = offense.value.trim()
-            var casedetailsValue = casedetails.value.trim()
-        }
-        
-
-    </script>
+    <script src="JavaScript/script.js"></script>
 </body>
 </html>
