--- a/HTML Wireframe/login.html
+++ b/HTML Wireframe/login.html
@@ -44,45 +44,28 @@
             </div>
             <div class="row" id="nomargin">
                 <div class="col-md-4" id="loginpassword">
-                    <label for="inputpassword">Password :</label>
-                    <input type="password" class="form-control" name="inputpassword" id="inputpassword" placeholder="*********">
+                    <label for="inputLoginPassword">Password :</label>
+                    <input type="password" class="form-control" name="inputLoginPassword" id="inputLoginPassword" placeholder="*********">
                 </div>
             </div>
             <div class="row" id="nomargin">
                 <div class="col-md-4" id="loginconfirm">
-                    <label for="inputconfirm">Confirm Password :</label>
-                    <input type="password" class="form-control" name="inputconfirm" id="inputconfirm" placeholder="*********">
+                    <label for="inputLoginConfirm">Confirm Password :</label>
+                    <input type="password" class="form-control" name="inputLoginConfirm" id="inputLoginConfirm" placeholder="*********">
                 </div>
             </div><div class="row" id="nomargin">
                 <div class="col-md-4">
-                    <button type="submit" class="btn btn-outline-dark" style="margin: auto;" onclick="validate()">Login</button>
+                    <button type="submit" class="btn btn-outline-dark" style="margin: auto;" id="login" onclick="validate()">Login</button>
                 </div>
             </div><div class="row" id="nomargin">
                 <div class="col-md-4">
-                    <a href="forgot.html" class="link-light"><em>Reset password here!</em></a>
+                    <a href="forgot.html" class="link-light"><em>Set new password here!</em></a>
                 </div>
             </div>
         </div>
         
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
-        function validate(){
-            var defaultPassword = "admin"
-            var inputpassword = document.getElementById("inputpassword").value;
-            var inputconfirm = document.getElementById("inputconfirm").value;
-            if (inputpassword == defaultPassword && inputconfirm == defaultPassword){
-                alert("Log-in Successfully");
-                window.location.href = 'lookupAdmin.html'
-                return false;
-            }
-            else{
-                alert("Log-in Failed");
-            }
-        }
-        // function passPword(){
-        //     var inputpassword = 
-        // }
-    </script>
+    <script src="JavaScript/script.js"></script>
 </body>
 </html>
