centered page contents

--- a/HTML Wireframe/results.html
+++ b/HTML Wireframe/results.html
@@ -35,7 +35,7 @@
     </nav>
     
     <div class="container-fluid">
-        <div class="row" style="margin: 5%;width: fit-content;">
+        <div class="row" style="margin: 5%;width: auto;">
             <div class="col-md-12">
                 <h1 style="margin: 0% auto 2%;">You have submitted a complaint</h1>
             </div>
