--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -58,7 +58,7 @@
           <input type="text" class="form-control" name="searchoffenderid" id="searchOffenderid" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-light" id="searchOffenderBtn" onclick="checkSearch()"><i class="fas fa-search"></i> Search</button>
+      <button type="submit" class="btn btn-outline-dark" id="searchOffenderBtn" onclick="checkSearch()"><i class="fas fa-search"></i> Search</button>
     </div>
     <hr style="margin-top: 5%;">
     <div class="container-lg">
