--- a/HTML Wireframe/lookupAdmin.html
+++ b/HTML Wireframe/lookupAdmin.html
@@ -82,7 +82,7 @@
           <input type="text" class="form-control" name="searchALoffenderid" id="searchALoffenderid" placeholder="0001">
         </div>
       </div>
-      <button type="submit" class="btn btn-outline-light" id="searchAdminLookup" onclick="checkSearchAL()"><i class="fas fa-search"></i> Search</button>
+      <button type="submit" class="btn btn-outline-dark" id="searchAdminLookup" onclick="checkSearchAL()"><i class="fas fa-search"></i> Search</button>
     </div>
     <hr style="margin-top: 5%;">
     <div class="container-lg">
