--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="welcome.html">Offender Locator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
                 aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
