--- a/HTML Wireframe/transfer.html
+++ b/HTML Wireframe/transfer.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="welcome.html">Anabu's Offender Locator</a>
             <ul class="navbar-nav ms-auto text-center">
                 <li><a class="nav-link" href="" onclick="printTransfer()"><img src="images/printer.png" alt="Print File" height="30px" width="30px"></a></li>
